DCS-632 Use staffIdentifier based instead of staffCode based community-api endpoints.

--- a/server/views/admin/users/migrate.pug
+++ b/server/views/admin/users/migrate.pug
@@ -14,16 +14,19 @@ block content
 
   h2.heading-large
     | Migrate User
-    
+
   div.pure-g.largePaddingBottom
-    div.purge-g  
+    div.purge-g
         div.pure-u-1-2
             h3.heading-medium Licence record
             div.pure-u-1-3 Name
-            div.pure-u-2-3.bold #{licenceUser.first} #{licenceUser.last} 
+            div.pure-u-2-3.bold #{licenceUser.first} #{licenceUser.last}
 
             div.pure-u-1-3 Delius staff code
             div.pure-u-2-3.bold #{licenceUser.deliusId}
+
+            div.pure-u-1-3 Delius staff identifier
+            div.pure-u-2-3.bold #{licenceUser.staffIdentifier}
 
             div.pure-u-1-3 Auth username
             div.pure-u-2-3.bold #{licenceUser.nomisId}
@@ -38,11 +41,14 @@ block content
           h3.heading-medium Delius record
           if deliusUser
             div.pure-u-1-3 Name
-            div.pure-u-2-3.bold #{deliusUser.staff.forenames} #{deliusUser.staff.surname} 
+            div.pure-u-2-3.bold #{deliusUser.staff.forenames} #{deliusUser.staff.surname}
 
             div.pure-u-1-3 Delius staff code
             div.pure-u-2-3.bold #{deliusUser.staffCode}
-            
+
+            div.pure-u-1-3 Delius staff identifier
+            div.pure-u-2-3.bold #{deliusUser.staffIdentifier}
+
             if !flags.includes('UNLINKED_ACCOUNT')
                 div.pure-u-1-3 Delius username
                 div.pure-u-2-3.bold #{deliusUser.username}
@@ -59,7 +65,7 @@ block content
             div.pure-u-1-3 Linked account
             div.pure-u-2-3.bold #{!flags.includes('UNLINKED_ACCOUNT')}
           else
-            p Missing user with username: 
+            p Missing user with username:
               span.bold #{licenceUser.deliusId}
 
   div.pure-g.largePaddingBottom
@@ -67,7 +73,7 @@ block content
           h3.heading-medium Auth record
           if authUser
             div.pure-u-1-3 Name
-            div.pure-u-2-3.bold #{authUser.firstName} #{authUser.lastName} 
+            div.pure-u-2-3.bold #{authUser.firstName} #{authUser.lastName}
 
             div.pure-u-1-3 Auth username
             div.pure-u-2-3.bold #{authUser.username}
@@ -84,7 +90,7 @@ block content
             div.pure-u-1-3 Roles
             div.pure-u-2-3.bold #{authUser.roles}
           else
-            p Missing user with username: 
+            p Missing user with username:
               span.bold #{licenceUser.nomisId}
       div.pure-u-1-2
         h3.heading-medium Actions
@@ -96,11 +102,11 @@ block content
                     input#continueBtn.requiredButton.button.smallMarginTop(type="submit" value="Assign RO role" formaction='/admin/roUsers/assign-role/' + licenceUser.nomisId)
               if !flags.includes('DISABLED_IN_AUTH')
                   div
-                    input#continueBtn.requiredButton.button.smallMarginTop(type="submit" value="Disable auth account" formaction='/admin/roUsers/disable-auth/' + licenceUser.nomisId) 
+                    input#continueBtn.requiredButton.button.smallMarginTop(type="submit" value="Disable auth account" formaction='/admin/roUsers/disable-auth/' + licenceUser.nomisId)
               if flags.includes('DISABLED_IN_AUTH')
                   div
-                    input#continueBtn.requiredButton.button.smallMarginTop(type="submit" value="Enable auth account" formaction='/admin/roUsers/enable-auth/' + licenceUser.nomisId) 
-          
+                    input#continueBtn.requiredButton.button.smallMarginTop(type="submit" value="Enable auth account" formaction='/admin/roUsers/enable-auth/' + licenceUser.nomisId)
+
         div
             a#backBtn.requiredButton.button.button-secondary.smallMarginTop(href="javascript: window.history.back();" role="button") Cancel
 
