--- a/server/views/admin/delius/responsibleOfficer.pug
+++ b/server/views/admin/delius/responsibleOfficer.pug
@@ -7,13 +7,13 @@ block content
 
     if ro.message
       h2 Error retrieving responsible officer from delius: #{staffDetails.message}
-    else   
+    else
       div.pure-g.pure-u-1.paddingTop
         form(method='POST' action='/admin/delius/managedOffenders')
           input(type="hidden" name="_csrf" value=csrfToken)
-          input(type="hidden" name="staffCode" value=ro.deliusId)
+          input(type="hidden" name="staffIdentifier" value=ro.staffIdentifier)
           div.pure-u-1-3
-            input.link(type="submit" value="View managed offenders for " + ro.deliusId)
+            input.link(type="submit" value="View managed offenders for " + ro.staffIdentifier + " (" + ro.deliusId + ")")
 
           div.pure-u-1
             table.largeMarginBottom
