--- a/server/views/contact/deliusRo.pug
+++ b/server/views/contact/deliusRo.pug
@@ -20,6 +20,9 @@ block content
             div.pure-u-1-3.sm-midPaddingBottom Staff code
             div.pure-u-2-3.bold #{ro.deliusId}
 
+            div.pure-u-1-3.sm-midPaddingBottom Staff identifier
+            div.pure-u-2-3.bold #{ro.staffIdentifier}
+
             div.pure-u-1-3.sm-midPaddingBottom Local Delivery Unit
             div.pure-u-2-3.bold #{ro.lduDescription} (#{ro.lduCode})
 
