DCS-359 Agency Notification form displays Actual Release Date The form now displays the Actual Release Date as well as the Conditional Release Date. As a side issue, a change was also made to mock-server/routes/delius.js as the logic to match the RO now uses the unique staffId rather than the non-unique staffCode value

--- a/server/views/forms/agency_notification.pug
+++ b/server/views/forms/agency_notification.pug
@@ -14,7 +14,7 @@ block content
     tr
       td Tel:
 
-  p The following prisoner is due to be released on Home Detention Curfew on #{SENT_CRD}.
+  p The following prisoner is due to be released on Home Detention Curfew on #{SENT_HDCAD}.
   
   table.semi-wide
     tr
