--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -177,9 +177,9 @@ $path: "/public/images/";
     .change-details {margin-top: 2.5em;}
     .taskListSingleLineItem .buttonContainer{margin-top: 2.3em;}
     .sm-padTop55 {padding-top: 55px};
-    #sm-contactUs {
+    #sm-feedback {
         position: relative;
-        top: 90px;
+        top: 130px;
     }
     .sm-pad15 {padding: 15px};
 }
