--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -75,9 +75,8 @@ html(lang="en")
 
     footer(class="group js-footer", id="footer", role="contentinfo")
       div(class="hdc-footer-wrapper")
-        p#sm-contactUs
-          span.bold.hideMobile Contact us:&nbsp;
-          a(href="mailto:hdcdigitalservice@digital.justice.gov.uk") hdcdigitalservice@digital.justice.gov.uk
+        p#sm-feedback
+          a(href = `${feedbackAndSupportUrl}`) Feedback and support
         div(class="footer-meta")
           div(class="footer-meta-inner")
             div(class="open-government-licence")
