DCS-772 Hide 'Exit to DPS link' from users for whom the link makes no sense (Non-NOMIS users).

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -25,4 +25,5 @@ block content
         a(href='/admin/functionalMailboxes/probationAreas') Manage functional mailboxes
 
       div.pure-u-1.sm-padTop55
-        a.link(href=exitUrl data-qa='exit-to-dps-link') Exit to Digital Prison Services
+        if showExitUrl
+          a.link(href=exitUrl data-qa='exit-to-dps-link') Exit to Digital Prison Services
