--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -3,7 +3,8 @@ extends ../layout
 block content
   div.pure-g
     div.pure-u-1.smallMarginTop
-      a.link(href=exitUrl data-qa='exit-to-dps-link') Exit to Digital Prison Services
+      if showExitUrl
+        a.link(href=exitUrl data-qa='exit-to-dps-link') Exit to Digital Prison Services
 
     if user.role === 'RO'
       div.pure-u-1.searchLink.alignRight.sm-padTop55.u-paddingTop
@@ -33,7 +34,8 @@ block content
         include ./DMTable
 
       div.largePaddingBottom
-        a.link.marginTop(href=exitUrl data-qa='exit-to-dps-link') Exit to Digital Prison Services
+        if showExitUrl
+          a.link.marginTop(href=exitUrl data-qa='exit-to-dps-link') Exit to Digital Prison Services
 
 block append scripts
   script(src="/public/javascripts/caseListFilter.js?" + version)
