DCS-559 Missing wording on the Post Sentence Supervision licence templates. Revised the vary_hdc_ap_pss template only.

--- a/server/views/licences/vary_hdc_ap_pss.pug
+++ b/server/views/licences/vary_hdc_ap_pss.pug
@@ -30,8 +30,11 @@ block content
       | Your post-sentence supervision period commences on
       =" "
       span.entry #{SENT_LED}
+      |  and expires on
+      =" "
+      span.entry #{SENT_TUSED}
 
-    div.smallPaddingBottom
+  div.smallPaddingBottom
 
     h2 Home Detention Curfew
 
@@ -108,20 +111,20 @@ block content
   div.grid-container
     div.grid-item
       p.checkbox
-    div.grid-item.border-left-none 
+    div.grid-item.border-left-none
       | You are being released subject to the licence period of a 12 months or longer sentence followed by a
       | post-sentence supervision period.
 
     div.grid-item.border-top-none
       p.checkbox
-    div.grid-item.border-left-none.border-top-none 
+    div.grid-item.border-left-none.border-top-none
       | You are being released subject to the licence period of an under 12 month sentence followed by a
       | post-sentence supervision period.
-    
+
     div.grid-item.border-top-none
       p.checkbox.checkbox-margin-top
     div.grid-item.border-left-none.border-top-none
-      | You are being released subject to the licence period of both a 12 month or longer 
+      | You are being released subject to the licence period of both a 12 month or longer
       | sentence and one or more under 12 month sentences(s) followed by a post-sentence
       | supervision period.
 
