DCS-924: acquistive crime question added to forms
DCS-924 minor refactor

--- a/server/views/forms/agency_notification.pug
+++ b/server/views/forms/agency_notification.pug
@@ -26,6 +26,8 @@ block content
     tr.top.spaceUnder
       td Gender:
 
+  p Is the prisoner partaking in the Acquisitive Crime project with a mandatory trail monitoring <br> condition? Yes No
+
   table.wide
     tr
       td Curfew address: #{CURFEW_ADDRESS}
