DCS 924 HDC add acquisitive question (#1277)
* DCS-924: acquistive crime question added to forms


DCS-924 minor refactor

* DCS-924 - minor changes

--- a/server/views/forms/licence_variation.pug
+++ b/server/views/forms/licence_variation.pug
@@ -19,6 +19,8 @@ block content
       td Curfew address: #{CURFEW_ADDRESS}
     tr.spaceUnder
       td Second Curfew Address (if required):
+      
+  p Is the prisoner partaking in the Acquisitive Crime project with a mandatory trail monitoring<br>condition? Yes No
 
   p The following changes have been made to the above’s licence conditions  (copy of revised licence attached where changes are permanent):
 
