--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -456,7 +456,7 @@ input[type="time"] {
 
 .default-text { color: $grey-1; font-style: italic; }
 
-.govuk-width-container {
+.feedback-banner-container {
   max-width: 1170px;
   padding-left: 15px;
   padding-right: 15px;
