--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -73,7 +73,7 @@ html(lang="en")
       include ./includes/notice
       block content
     
-    div(class="govuk-width-container")
+    div(class="feedback-banner-container")
       div(class="feedback-banner")
         a(href="https://eu.surveymonkey.com/r/GYB8Y9Q?source=" + hostname + currentUrlPath class="govuk-link govuk-link--inverse" target="_blank" rel="noopener noreferrer") Give feedback on this service
     
