DCS-1160 Caseload actions added to each page
User can view and change their location, aka caseload, from any page in the app.
This action was previosuly done by user in the DPS service.
Showing the 'Change location' link is conditional on user having more than 1 location.
Showing the current location is dependant on user having a currentlyActive caseload

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -11,6 +11,7 @@ $path: "/public/images/";
 @import './pagination';
 @import './additionalConditions';
 @import './tableSort';
+@import './change-location';
 
 .pure-g {
     font-family: "nta",Arial,sans-serif;
