DCS-1160 Caseload actions added to each page (#1298)
* DCS-1160 Caseload actions added to each page

User can view and change their location, aka caseload, from any page in the app.
This action was previosuly done by user in the DPS service.
Showing the 'Change location' link is conditional on user having more than 1 location.
Showing the current location is dependant on user having a currentlyActive caseload

* DCS-1160: refactor as per PR comments

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -71,6 +71,20 @@ html(lang="en")
 
     main.app-container(role="main")
       include ./includes/notice
+
+      div(class="change-location")
+        - var hasActiveCaseload = user.activeCaseLoad && !user.activeCaseLoad.description.includes('---')
+        - var hasMultipleCaseloads = user.caseLoads && user.caseLoads.length > 1
+
+        if hasActiveCaseload
+          span(class="change-location__location" data-qa="active-location") #{user.activeCaseLoad.description}
+
+        if hasMultipleCaseloads
+          a(class="change-location__link" href="/user" data-qa="change-location-link") Change your location
+
+      if hasActiveCaseload || hasMultipleCaseloads
+        hr(class="smallMarginBottom smallMarginTop")
+      
       block content
     
     div(class="feedback-banner-container")
