--- a/server/views/pdf/missing/sentenceInfo.pug
+++ b/server/views/pdf/missing/sentenceInfo.pug
@@ -35,4 +35,4 @@ block content
 
   div.paddingBottom.smallPaddingTop
     div.pure-u-1.inlineButtons
-      a#backBtn.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/pdf/taskList/" + templateName + "/" + prisoner.bookingId role="button") Return to task list
+      a#backBtn.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/pdf/taskList/" + prisoner.bookingId role="button") Return to task list
