DCS-1181: Page title changed The page title on /user changes depending on whether the user has multiple roles. This is simlar to how the change location link changes (underneath the header), on every page

--- a/server/views/user/admin.pug
+++ b/server/views/user/admin.pug
@@ -10,6 +10,8 @@ block content
         include ../includes/back
 
   - var showCaseLoads = !isAdmin && allCaseLoads.length > 1
+  - var pageTitle = allRoles && allRoles.length > 1 ? "Change your role or location" : "Change your location"
+
   if allRoles.length > 1 || showCaseLoads
 
     form(method="post")
@@ -17,7 +19,7 @@ block content
       input(type="hidden" name="bookingId" value=bookingId || '')
 
       h2.pure-u-1.heading-large
-        | Change location
+        | #{pageTitle}
 
       if allRoles.length > 1
 
