DCS-1172 chenged views to refer to Community Offender Manager (COM) rather than Responsible officer (RO)

--- a/server/views/admin/index.pug
+++ b/server/views/admin/index.pug
@@ -6,7 +6,7 @@ block content
     div.pure-u-1.largeMarginTop
       h2.heading-medium Admin
       div
-        a(href='/admin/roUsers') RO users
+        a(href='/admin/roUsers') COM users
       div
         a(href='/admin/mailboxes') Notification mailboxes
       div
