--- a/server/views/admin/licences/notify.pug
+++ b/server/views/admin/licences/notify.pug
@@ -5,12 +5,12 @@ block content
 
   include ../../includes/back
 
-  h1.heading-large Notify Responsible officer
+  h1.heading-large Notify Community Offender Manager
   include ../../taskList/prisonerDetails
   div.borderBottom.paddingBottom
     h2.heading-medium Notify
     div
-      p Notify the RO that they have been sent the offender's case.
+      p Notify the COM that they have been sent the offender's case.
       p Pressing the button below will send an email to 
         a(href="/hdc/contact/" + bookingId) #{prisonerInfo.com.name}
         |, their functional mailbox and the clearing office.
