--- a/server/views/admin/users/delete.pug
+++ b/server/views/admin/users/delete.pug
@@ -5,7 +5,7 @@ block content
   div.back-link-container.smallPaddingTop
     a#back.link-back(href="/admin/") Back
 
-  h2.heading-large Delete RO user?
+  h2.heading-large Delete COM user?
 
   form#deleteUserForm(method='POST')
     input(type="hidden" name="_csrf" value=csrfToken)
