--- a/server/views/admin/users/migrate.pug
+++ b/server/views/admin/users/migrate.pug
@@ -59,7 +59,7 @@ block content
                 div.pure-u-1-3 Enabled
                 div.pure-u-2-3.bold #{!flags.includes('DISABLED_IN_DELIUS')}
 
-                div.pure-u-1-3 RO role present
+                div.pure-u-1-3 COM role present
                 div.pure-u-2-3.bold #{!flags.includes('REQUIRES_RO_ROLE')}
 
             div.pure-u-1-3 Linked account
