--- a/server/views/bassReferral/rejected.pug
+++ b/server/views/bassReferral/rejected.pug
@@ -10,7 +10,7 @@ block content
     include ../includes/back
 
     h2.heading-large BASS area rejected
-    p The following BASS area has been returned by the Responsible Officer:
+    p The following BASS area has been returned by the Community Offender Manager:
 
     div.pure-g.borderBottomLight
       div.pure-u-1.pure-u-md-1-2
