--- a/server/views/contact/ro.pug
+++ b/server/views/contact/ro.pug
@@ -10,7 +10,7 @@ block content
     div.pure-u-1
       div.pure-g
         div.pure-u-2-3
-          h2.heading-large.midPaddingBottom Responsible officer
+          h2.heading-large.midPaddingBottom Community Offender Manager
 
         div.pure-u-1
           if (contact)
