--- a/server/views/proposedAddress/rejected.pug
+++ b/server/views/proposedAddress/rejected.pug
@@ -14,7 +14,7 @@ block content
     include ../includes/back
 
     h2.heading-large Curfew address rejected
-    p The following address has been returned by the Responsible Officer:
+    p The following address has been returned by the Community Offender Manager:
       +errorBannerWithDetail(errorObject, [{ field: 'enterAlternative' }])
 
     div.pure-g.borderBottomLight
