--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -28,7 +28,7 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
 
   div.pure-u-1.pure-u-md-10-24.padRight30
     div.midMarginBottom
-      | Responsible officer
+      | Community Offender Manager
       if (prisonerInfo.com)
         span#prisonerComName.block.bold
           if (prisonerInfo.com)
