--- a/server/views/taskList/tasks/caBlockedTask.pug
+++ b/server/views/taskList/tasks/caBlockedTask.pug
@@ -25,7 +25,7 @@ mixin lduInactive()
     h2.heading-medium You cannot submit this case
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
-            p This is because the assigned Responsible officer is in an area not covered by the HDC roll out
+            p This is because the assigned Community Offender Manager is in an area not covered by the HDC roll out
             h3.heading-small What you need to do
             p Process the case in NOMIS instead
 
