DCS-1172 Replaced Local Delivery Unit with Local Admin Unit and LDU with LAU, in views

--- a/server/views/admin/functionalMailboxes/lduWithTeams.pug
+++ b/server/views/admin/functionalMailboxes/lduWithTeams.pug
@@ -18,11 +18,11 @@ block content
     div.error-banner.marginTopMedium
       span.bold #{success[0]}
 
-  h2.heading-medium LDU
+  h2.heading-medium LAU
   div.pure-g.borderBottom.paddingBottom
     div.pure-u-1.pure-u-md-2-3.midMarginBottom
       p
-        span.bold LDU:&nbsp;
+        span.bold LAU:&nbsp;
         span #{description} (#{lduCode})
       p
         span.bold Probation Area:&nbsp;
