--- a/server/views/contact/deliusRo.pug
+++ b/server/views/contact/deliusRo.pug
@@ -23,7 +23,7 @@ block content
             div.pure-u-1-3.sm-midPaddingBottom Staff identifier
             div.pure-u-2-3.bold #{ro.staffIdentifier}
 
-            div.pure-u-1-3.sm-midPaddingBottom Local Delivery Unit
+            div.pure-u-1-3.sm-midPaddingBottom Local Admin Unit
             div.pure-u-2-3.bold #{ro.lduDescription} (#{ro.lduCode})
 
             div.pure-u-1-3.sm-midPaddingBottom Probation area
