DCS-1172 more references to responsible officer changed to community offender manager

--- a/server/views/admin/delius/index.pug
+++ b/server/views/admin/delius/index.pug
@@ -25,7 +25,7 @@ block content
 
 
     div.pure-u-1.largeMarginTop
-      h2.heading-medium Get responsible officer
+      h2.heading-medium Get community offender manager
 
       form(method='POST' action='/admin/delius/responsibleOfficer')
         input(type="hidden" name="_csrf" value=csrfToken)
