--- a/server/views/bassReferral/bassOffer.pug
+++ b/server/views/bassReferral/bassOffer.pug
@@ -36,7 +36,7 @@ block content
 
       else
         if bassAreaCheck.bassAreaSuitable === 'Yes'
-          | The responsible officer has approved the following BASS area:
+          | The community offender manager has approved the following BASS area:
 
         div.paddingTop.paddingBottom
           div.pure-u-1-2
