--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -29,7 +29,7 @@ block content
       div.pure-u-1.pure-u-1-2.midPaddingBottom
         p The following address has been requested by the offender
         if licenceStatus.tasks.curfewAddressReview === 'DONE'
-          | and checked by the responsible officer.
+          | and checked by the community offender manager.
 
       if address.addressLine1
         +addressDetail('curfew', address, review)
