--- a/server/views/sent/caToRo.pug
+++ b/server/views/sent/caToRo.pug
@@ -7,6 +7,6 @@ block content
   if submissionTarget
     +sentContent('Case sent', submissionTarget.name)
   else
-    +sentContent('Case sent', 'No responsible officer found')
+    +sentContent('Case sent', 'No community offender manager found')
 
 
