--- a/server/views/admin/delius/managedOffenders.pug
+++ b/server/views/admin/delius/managedOffenders.pug
@@ -11,7 +11,7 @@ block content
         input(type="hidden" name="_csrf" value=csrfToken)
         input(type="hidden" name="offenderNo" value=offenders[0].offenderNo)
         div.pure-u-1-3
-          input.link(type="submit" value="View responsible officer for these offenders")
+          input.link(type="submit" value="View community offender manager for these offenders")
 
     div.pure-g.pure-u-1
       table.largeMarginBottom
