--- a/server/views/review/curfewAddress.pug
+++ b/server/views/review/curfewAddress.pug
@@ -37,7 +37,7 @@ block content
     h2.heading-medium Now send the case
 
     div.pure-u-1.pure-u-md-3-4
-      | The case is ready to send to the responsible officer for address checks.
+      | The case is ready to send to the community offender manager for address checks.
 
     div.paddingBottom.smallPaddingTop
       form#addressReviewForm(method='POST', action='/hdc/send/addressReview/' + bookingId)
