--- a/server/views/send/caToRo.pug
+++ b/server/views/send/caToRo.pug
@@ -10,14 +10,14 @@ block content
   div.pure-g.largePaddingBottom
     div.pure-u-1.pure-u-2-3
       h2.heading-large.midPaddingBottom Submit curfew address
-      p.lede The proposed curfew address is ready to send to the offender's responsible officer.
+      p.lede The proposed curfew address is ready to send to the offender's community offender manager.
 
       p The information will be submitted to:
 
       if submissionTarget
         div#ro.bold.paddingBottom #{submissionTarget.name}
       else
-        div.paddingBottom No responsible officer found
+        div.paddingBottom No community offender manager found
 
   div#continueBtns.pure-g.paddingBottom
     div.pure-u-1
