--- a/server/views/taskList/tasks/informBassTask.pug
+++ b/server/views/taskList/tasks/informBassTask.pug
@@ -5,7 +5,7 @@ div.largeMarginBottom
   div.pure-g
 
     div.pure-u-1.pure-u-md-3-4
-      | The BASS area has been approved by the responsible officer. You should now submit the request to BASS
+      | The BASS area has been approved by the community offender manager. You should now submit the request to BASS
 
     div.pure-u-1.pure-u-md-1-4.center
       +taskButton("/caseList/active", 'Back to case list', 'grey')
