DCS-1172 changed views to refer to Community Offender Manager (COM) r… (#1308)
* DCS-1172 chenged views to refer to Community Offender Manager (COM) rather than Responsible officer (RO)

* DCS-1172 Replaced Local Delivery Unit with Local Admin Unit and LDU with LAU, in views

* DCS-1172 more references to responsible officer changed to community offender manager

--- a/server/views/contact/deliusRo.pug
+++ b/server/views/contact/deliusRo.pug
@@ -10,7 +10,7 @@ block content
     div.pure-u-1
       div.purge-g
         div.pure-u-2-3
-          h2.heading-large.midPaddingBottom Responsible officer
+          h2.heading-large.midPaddingBottom Community Offender Manager
 
         div.pure-u-2-3
           if (ro)
@@ -23,7 +23,7 @@ block content
             div.pure-u-1-3.sm-midPaddingBottom Staff identifier
             div.pure-u-2-3.bold #{ro.staffIdentifier}
 
-            div.pure-u-1-3.sm-midPaddingBottom Local Delivery Unit
+            div.pure-u-1-3.sm-midPaddingBottom Local Admin Unit
             div.pure-u-2-3.bold #{ro.lduDescription} (#{ro.lduCode})
 
             div.pure-u-1-3.sm-midPaddingBottom Probation area
