DCS-1239 Handling weird bespoke list fields and adding first form

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -62,3 +62,6 @@ div.form-group
 
   if formItem === 'drug_testing'
     include drug_testing
+
+  if formItem === 'resideWithinRegion'
+    include resideWithinRegion
