DCS-1239 Add 3 additional forms and tidy up date handling
Also adding in Extremism conditions and reordering

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -65,3 +65,12 @@ div.form-group
 
   if formItem === 'resideWithinRegion'
     include resideWithinRegion
+
+  if formItem === 'specificItem'
+    include specificItem
+
+  if formItem === 'electronicMonitoringInstallation'
+    include electronicMonitoringInstallation
+
+  if formItem === 'electronicTrailMonitoring'
+    include electronicTrailMonitoring
