DCS-1239 Adding additional fields, fixing issue with dates and moving abuse behaviours into config

--- a/server/views/licenceConditions/includes/courseOrCentre.pug
+++ b/server/views/licenceConditions/includes/courseOrCentre.pug
@@ -5,7 +5,7 @@ div.pure-g.paddingBottom
       if condition.user_submission && condition.user_submission.courseOrCentre
         | #{condition.user_submission.courseOrCentre}
 
-
+- var behaviours = condition.user_submission && condition.user_submission.abuseAndBehaviours || []
 div.govuk-fieldset
   div.multiple-choice
     input(id='alcoholAbuse' type='checkbox' name='abuseAndBehaviours' value='alcohol abuse' checked=behaviours.includes('alcohol abuse'))
