--- a/server/views/licenceConditions/includes/electronicMonitoringInstallation.pug
+++ b/server/views/licenceConditions/includes/electronicMonitoringInstallation.pug
@@ -1,4 +1,4 @@
-label(for='conditionTypes') Enter types of conditions to be monitored
-textarea(name='conditionTypes' id='conditionTypes' class='form-control' rows='7' aria-label="Enter types of conditions to be monitored")
+label(for='conditionTypes') Types of conditions to be monitored
+textarea(name='conditionTypes' id='conditionTypes' class='form-control' rows='7' aria-label="Types of conditions to be monitored")
   if condition.user_submission && condition.user_submission.conditionTypes
     | #{condition.user_submission.conditionTypes}
