--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -74,3 +74,9 @@ div.form-group
 
   if formItem === 'electronicTrailMonitoring'
     include electronicTrailMonitoring
+  
+  if formItem === 'curfewUntilInstallation'
+    include curfewUntilInstallation
+
+  if formItem === 'alcoholMonitoring'
+    include alcoholMonitoring
