DCS-1239 Altering form for attend_all to allow selecting more than one option

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -3,6 +3,10 @@
 div.form-group
   if formItem === 'appointmentName'
     include appointmentName
+
+  if formItem === 'attendAll'
+    include attendAll
+
   if formItem === 'mentalHealthName'
     include mentalHealthName
 
